# shiny-engine

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  shiny-engine
src/: main.cpp
src/evaluation/: evaluation.cpp  evaluation.h
src/fen/: fen.cpp  fen.h
src/internal-uci/: uci.cpp  uci.h  utils.cpp
src/position/: position.cpp  position.h
src/searching/: alpha_beta.cpp  alpha_beta.h  pvs.cpp  pvs.h  searching.cpp  searching.h  tt.cpp  tt.h  zobrist.cpp
src/threading/: parallel_search.cpp  parallel_search.h  pvs_mt.cpp  pvs_mt.h  search_control.cpp  search_control.h  thread_pool.cpp  thread_pool.h
src/utils/: board.cpp  board.h  chess_logic.cpp  chess_logic.h  fen_utils.cpp  fen_utils.h  figures.h  position.cpp  position.h  ratio.cpp  ratio.h
